--- a/TOC/reprint/print.html
+++ b/TOC/reprint/print.html
@@ -10,12 +10,36 @@
 <table class="tg" style="undefined;table-layout: fixed; width: 100%; height:100%">
 <thead>
   <tr>
-    <th class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/01</span></th>
+    <th class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/09</span></th>
   </tr>
 </thead>
 <tbody>
   <tr>
+    <td class="tg-7zrl">Haikyu!!  23-44</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/04</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Haikyu!!  1-22</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/03</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Jujutsu Kaisen  0, 1-11</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/01</span></td>
+  </tr>
+  <tr>
     <td class="tg-7zrl">Kochikame  97-128</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/28</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">The Promised Neverland  1-19</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/18</span></td>
