--- a/TOC/reprint/issue.html
+++ b/TOC/reprint/issue.html
@@ -15,10 +15,29 @@
 </colgroup>
 <thead>
   <tr>
-    <th class="tg-m7nw" colspan="2">16-Jul-2020</th>
+    <th class="tg-m7nw" colspan="2">29-Jul-2020</th>
   </tr>
 </thead>
 <tbody>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/28  The Promised&nbsp;&nbsp;&nbsp;Neverland 1-19</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/03  Jujutsu Kaisen 0,&nbsp;&nbsp;&nbsp;1-11</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/04  Haikyu!! 1-22</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/09  Haikyu!! 23-44</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw" colspan="2">16-Jul-2020</td>
+  </tr>
   <tr>
     <td class="tg-7zrl"></td>
     <td class="tg-7zrl">08/18  Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess 1-2</td>
