removed extra spaces

--- a/TOC/reprint/issue.html
+++ b/TOC/reprint/issue.html
@@ -21,11 +21,11 @@
 <tbody>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/28  The Promised&nbsp;&nbsp;&nbsp;Neverland 1-19</td>
+    <td class="tg-7zrl">08/28  The Promised&nbsp;Neverland 1-19</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/03  Jujutsu Kaisen 0,&nbsp;&nbsp;&nbsp;1-11</td>
+    <td class="tg-7zrl">09/03  Jujutsu Kaisen 0,&nbsp;1-11</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -40,7 +40,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/18  Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess 1-2</td>
+    <td class="tg-7zrl">08/18  Tis Time for&nbsp;"Torture," Princess 1-2</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -64,11 +64,11 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17  Dosanko Gyaru is&nbsp;&nbsp;&nbsp;Mega Cute 1</td>
+    <td class="tg-7zrl">08/17  Dosanko Gyaru is&nbsp;Mega Cute 1</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17  Boukyaku Battery&nbsp;&nbsp;&nbsp;1</td>
+    <td class="tg-7zrl">08/17  Boukyaku Battery&nbsp;1</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">13-Jul-2020</td>
@@ -323,7 +323,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">07/10 Haikyu!! Official Color Illustrations Book Collection&nbsp;&nbsp;&nbsp;High Color!!</td>
+    <td class="tg-7zrl">07/10 Haikyu!! Official Color Illustrations Book Collection&nbsp;High Color!!</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">09-Jun-2020</td>
@@ -536,7 +536,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">06/09 ONE PIECE 34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;&nbsp;&nbsp;76-80</td>
+    <td class="tg-7zrl">06/09 ONE PIECE 34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;76-80</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -568,7 +568,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">06/16 Haikyu!! Official Color Illustrations Book Collection&nbsp;&nbsp;&nbsp;High Color!!</td>
+    <td class="tg-7zrl">06/16 Haikyu!! Official Color Illustrations Book Collection&nbsp;High Color!!</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
