--- a/TOC/reprint/print.html
+++ b/TOC/reprint/print.html
@@ -48,7 +48,7 @@
     <td class="tg-7zrl">Undead Unluck  1-2</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  1-2</td>
+    <td class="tg-7zrl">Tis Time for&nbsp;"Torture," Princess  1-2</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Agravity Boys  1-2</td>
@@ -66,7 +66,7 @@
     <td class="tg-7zrl">SPYxFAMILY  1</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Dosanko Gyaru is Mega&nbsp;&nbsp;&nbsp;Cute  1</td>
+    <td class="tg-7zrl">Dosanko Gyaru is Mega&nbsp;Cute  1</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Boukyaku Battery  1</td>
@@ -81,7 +81,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/04</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection  </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection  </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kimetsu no Yaiba  12-21</td>
@@ -96,7 +96,7 @@
     <td class="tg-7zrl">act-age  3, 10, 11</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Boruto: Naruto Next&nbsp;&nbsp;&nbsp;Generations  10</td>
+    <td class="tg-7zrl">Boruto: Naruto Next&nbsp;Generations  10</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Eren the Southpaw  11</td>
@@ -129,13 +129,13 @@
     <td class="tg-7zrl">The Promised Neverland  6-8, 16-18</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  2</td>
+    <td class="tg-7zrl">Tis Time for&nbsp;"Torture," Princess  2</td>
   </tr>
   <tr>
     <td class="tg-7zrl">World Trigger  13-15</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Yu-Gi-Oh ARC-V Strongest&nbsp;&nbsp;&nbsp;Duelist Yuya!!  2</td>
+    <td class="tg-7zrl">Yu-Gi-Oh ARC-V Strongest&nbsp;Duelist Yuya!!  2</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">07/30</span></td>
@@ -183,10 +183,10 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">07/13</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Captain Tsubasa Rising&nbsp;&nbsp;&nbsp;Sun  3, 4</td>
+    <td class="tg-7zrl">Captain Tsubasa Rising&nbsp;Sun  3, 4</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Rurouni Kenshin: Hokkaido&nbsp;&nbsp;&nbsp;Arc  1-4</td>
+    <td class="tg-7zrl">Rurouni Kenshin: Hokkaido&nbsp;Arc  1-4</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">07/10</span></td>
@@ -195,7 +195,7 @@
     <td class="tg-7zrl">Haikyu!!  1-43</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Haikyu!!  Official Color Illustrations Book&nbsp;&nbsp;&nbsp;Collection High Color!!</td>
+    <td class="tg-7zrl">Haikyu!!  Official Color Illustrations Book&nbsp;Collection High Color!!</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kimetsu no Yaiba  21 SE</td>
@@ -243,7 +243,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">07/06</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Boruto: Naruto Next&nbsp;&nbsp;&nbsp;Generations  1, 3, 4, 8</td>
+    <td class="tg-7zrl">Boruto: Naruto Next&nbsp;Generations  1, 3, 4, 8</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Dr. Stone  1-15</td>
@@ -285,7 +285,7 @@
     <td class="tg-7zrl">One Piece  26</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">'Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  1</td>
+    <td class="tg-7zrl">'Tis Time for&nbsp;"Torture," Princess  1</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">06/30</span></td>
@@ -306,7 +306,7 @@
     <td class="tg-7zrl">Chainsaw Man  1-7</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection  </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection  </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kimetsu no Yaiba  11-19</td>
@@ -342,7 +342,7 @@
     <td class="tg-7zrl">Haikyu!!  1-42</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Haikyu!!  Official Color Illustrations Book&nbsp;&nbsp;&nbsp;Collection High Color!!</td>
+    <td class="tg-7zrl">Haikyu!!  Official Color Illustrations Book&nbsp;Collection High Color!!</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Haikyu-bu!!  1</td>
@@ -384,7 +384,7 @@
     <td class="tg-7zrl">My Hero Academia  1-26</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">My Hero Academia:&nbsp;&nbsp;&nbsp;Vigilantes  2</td>
+    <td class="tg-7zrl">My Hero Academia:&nbsp;Vigilantes  2</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">06/09</span></td>
@@ -393,13 +393,13 @@
     <td class="tg-7zrl">Black Clover  1-19</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Black Clover Quartet&nbsp;&nbsp;&nbsp;Knights  2</td>
+    <td class="tg-7zrl">Black Clover Quartet&nbsp;Knights  2</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kinnikuman  41, 45, 56</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">ONE PIECE  34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;&nbsp;&nbsp;76-80</td>
+    <td class="tg-7zrl">ONE PIECE  34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;76-80</td>
   </tr>
   <tr>
     <td class="tg-7zrl">ONE PIECE Gakuen  1</td>
@@ -459,7 +459,7 @@
     <td class="tg-7zrl">SPYxFAMILY  4</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Super Dragon Ball Heros Dark&nbsp;&nbsp;&nbsp;Makai Mission!!  1</td>
+    <td class="tg-7zrl">Super Dragon Ball Heros Dark&nbsp;Makai Mission!!  1</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">06/03</span></td>
@@ -510,7 +510,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">05/19</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection   </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection   </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Jujutsu Kaisen  0</td>
@@ -603,10 +603,10 @@
     <td class="tg-7zrl">Jujutsu Kaisen  1-10</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">My Hero Academia: Team Up&nbsp;&nbsp;&nbsp;Mission  1</td>
+    <td class="tg-7zrl">My Hero Academia: Team Up&nbsp;Mission  1</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">'Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  1</td>
+    <td class="tg-7zrl">'Tis Time for&nbsp;"Torture," Princess  1</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Yozakura Family  1</td>
@@ -615,7 +615,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">04/02</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection   </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection   </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kimetsu no Yaiba  4-13</td>
@@ -651,7 +651,7 @@
     <td class="tg-7zrl">Kimetsu no Yaiba  1-5</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Sing "Yesterday" for&nbsp;&nbsp;&nbsp;Me  1-11</td>
+    <td class="tg-7zrl">Sing "Yesterday" for&nbsp;Me  1-11</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">03/06</span></td>
@@ -663,7 +663,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">03/05</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection   </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection   </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Jujutsu Kaisen  0</td>
@@ -723,7 +723,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">02/05</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection   </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection   </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Jujutsu Kaisen  0</td>
