--- a/TOC/reprint/issue.html
+++ b/TOC/reprint/issue.html
@@ -15,36 +15,25 @@
 </colgroup>
 <thead>
   <tr>
-    <th class="tg-m7nw" colspan="2">29-Jul-2020</th>
+    <th class="tg-m7nw" colspan="2">11-Aug-2020</th>
   </tr>
 </thead>
 <tbody>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/28  The Promised&nbsp;Neverland 1-19</td>
+    <td class="tg-7zrl">09/01  Jujutsu Kaisen 12</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/03  Jujutsu Kaisen 0,&nbsp;1-11</td>
+    <td class="tg-7zrl">09/03  Chainsaw Man 8</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/04  Haikyu!! 1-22</td>
+    <td class="tg-7zrl">09/03  Haikyu!! 44</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/09  Haikyu!! 23-44</td>
-  </tr>
-  <tr>
-    <td class="tg-m7nw" colspan="2">16-Jul-2020</td>
-  </tr>
-  <tr>
-    <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/18  Tis Time for&nbsp;"Torture," Princess 1-2</td>
-  </tr>
-  <tr>
-    <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/18  Agravity Boys 1-2</td>
+    <td class="tg-7zrl">09/03  MASHLE 1-2</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -52,23 +41,112 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17  2.5D Seduction 1</td>
+    <td class="tg-7zrl">09/03  Kemono Jihen 11</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17  Jigokuraku 1</td>
+    <td class="tg-7zrl">09/03  Dokyuu Hentai&nbsp;&nbsp;&nbsp;HxEros 8</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17  SPYxFAMILY 1</td>
+    <td class="tg-7zrl">09/03  Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess 3</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17  Dosanko Gyaru is&nbsp;Mega Cute 1</td>
+    <td class="tg-7zrl">09/03  Mission: Yozakura&nbsp;&nbsp;&nbsp;Family 2-4</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17  Boukyaku Battery&nbsp;1</td>
+    <td class="tg-7zrl">10/01  Kochikame 129-160</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw" colspan="2">31-Jul-2020</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/25SPYxFAMILY 1-4</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/04Moriarty the Patriot 1-12</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">- </td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/01Kochikame 97-128</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/01Blue Exorcist 17, 19, 21</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/01Seraph of The End 1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/01Fire Punch 1-8</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/01Yu-Gi-Oh! OGC Structures &nbsp;&nbsp;&nbsp;1</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw" colspan="2">29-Jul-2020</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/28The Promised Neverland 1-19</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/03Jujutsu Kaisen 0, 1-11</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/04Haikyu!! 1-22</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">09/09Haikyu!! 23-44</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw" colspan="2">16-Jul-2020</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/18Tis Time for "Torture," Princess 1-2</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/18Agravity Boys 1-2</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">- </td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/172.5D Seduction 1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/17Jigokuraku 1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/17SPYxFAMILY 1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/17Dosanko Gyaru is Mega Cute 1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl"></td>
+    <td class="tg-7zrl">08/17Boukyaku Battery 1</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">13-Jul-2020</td>
@@ -323,7 +401,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">07/10 Haikyu!! Official Color Illustrations Book Collection&nbsp;High Color!!</td>
+    <td class="tg-7zrl">07/10 Haikyu!! Official Color Illustrations Book Collection&nbsp;&nbsp;&nbsp;High Color!!</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">09-Jun-2020</td>
@@ -536,7 +614,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">06/09 ONE PIECE 34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;76-80</td>
+    <td class="tg-7zrl">06/09 ONE PIECE 34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;&nbsp;&nbsp;76-80</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -568,7 +646,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">06/16 Haikyu!! Official Color Illustrations Book Collection&nbsp;High Color!!</td>
+    <td class="tg-7zrl">06/16 Haikyu!! Official Color Illustrations Book Collection&nbsp;&nbsp;&nbsp;High Color!!</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -638,11 +716,11 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">04/24 Yozakura Family 2</td>
+    <td class="tg-7zrl">04/30 Dr. Stone 15</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">04/30 Dr. Stone 15</td>
+    <td class="tg-7zrl">04/24 Mission: Yozakura Family 2</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -650,11 +728,11 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">04/24 Yozakura Family 1</td>
+    <td class="tg-7zrl">05/01 Agravity Boys 1</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">05/01 Agravity Boys 1</td>
+    <td class="tg-7zrl">04/24 Mission: Yozakura Family 1</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">01-Apr-2020</td>
@@ -715,7 +793,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">04/03 Yozakura Family 1</td>
+    <td class="tg-7zrl">04/03 Mission: Yozakura Family 1</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">11-Mar-2020</td>
