--- a/TOC/reprint/print.html
+++ b/TOC/reprint/print.html
@@ -10,10 +10,16 @@
 <table class="tg" style="undefined;table-layout: fixed; width: 100%; height:100%">
 <thead>
   <tr>
-    <th class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/09</span></th>
+    <th class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">10/01</span></th>
   </tr>
 </thead>
 <tbody>
+  <tr>
+    <td class="tg-7zrl">Kochikame  129-160</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/09</span></td>
+  </tr>
   <tr>
     <td class="tg-7zrl">Haikyu!!  23-44</td>
   </tr>
@@ -24,10 +30,34 @@
     <td class="tg-7zrl">Haikyu!!  1-22</td>
   </tr>
   <tr>
+    <td class="tg-7zrl">Moriarty the Patriot  1-12</td>
+  </tr>
+  <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/03</span></td>
   </tr>
   <tr>
     <td class="tg-7zrl">Jujutsu Kaisen  0, 1-11</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Chainsaw Man  8</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Haikyu!!  44</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">MASHLE  1-2</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Kemono Jihen  11</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Dokyuu Hentai HxEros  8</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  3</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Mission: Yozakura Family  2-4</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">09/01</span></td>
@@ -36,10 +66,31 @@
     <td class="tg-7zrl">Kochikame  97-128</td>
   </tr>
   <tr>
+    <td class="tg-7zrl">Blue Exorcist  17, 19, 21</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Seraph of The End  1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Fire Punch  1-8</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Yu-Gi-Oh! OGC Structures   1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Jujutsu Kaisen  12</td>
+  </tr>
+  <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/28</span></td>
   </tr>
   <tr>
     <td class="tg-7zrl">The Promised Neverland  1-19</td>
+  </tr>
+  <tr>
+    <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/25</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">SPYxFAMILY  1-4</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/18</span></td>
@@ -48,7 +99,7 @@
     <td class="tg-7zrl">Undead Unluck  1-2</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Tis Time for&nbsp;"Torture," Princess  1-2</td>
+    <td class="tg-7zrl">Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  1-2</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Agravity Boys  1-2</td>
@@ -66,7 +117,7 @@
     <td class="tg-7zrl">SPYxFAMILY  1</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Dosanko Gyaru is Mega&nbsp;Cute  1</td>
+    <td class="tg-7zrl">Dosanko Gyaru is Mega&nbsp;&nbsp;&nbsp;Cute  1</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Boukyaku Battery  1</td>
@@ -81,7 +132,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">08/04</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection  </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection  </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kimetsu no Yaiba  12-21</td>
@@ -96,7 +147,7 @@
     <td class="tg-7zrl">act-age  3, 10, 11</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Boruto: Naruto Next&nbsp;Generations  10</td>
+    <td class="tg-7zrl">Boruto: Naruto Next&nbsp;&nbsp;&nbsp;Generations  10</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Eren the Southpaw  11</td>
@@ -129,13 +180,13 @@
     <td class="tg-7zrl">The Promised Neverland  6-8, 16-18</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Tis Time for&nbsp;"Torture," Princess  2</td>
+    <td class="tg-7zrl">Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  2</td>
   </tr>
   <tr>
     <td class="tg-7zrl">World Trigger  13-15</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Yu-Gi-Oh ARC-V Strongest&nbsp;Duelist Yuya!!  2</td>
+    <td class="tg-7zrl">Yu-Gi-Oh ARC-V Strongest&nbsp;&nbsp;&nbsp;Duelist Yuya!!  2</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">07/30</span></td>
@@ -183,10 +234,10 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">07/13</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Captain Tsubasa Rising&nbsp;Sun  3, 4</td>
+    <td class="tg-7zrl">Captain Tsubasa Rising&nbsp;&nbsp;&nbsp;Sun  3, 4</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Rurouni Kenshin: Hokkaido&nbsp;Arc  1-4</td>
+    <td class="tg-7zrl">Rurouni Kenshin: Hokkaido&nbsp;&nbsp;&nbsp;Arc  1-4</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">07/10</span></td>
@@ -195,7 +246,7 @@
     <td class="tg-7zrl">Haikyu!!  1-43</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Haikyu!!  Official Color Illustrations Book&nbsp;Collection High Color!!</td>
+    <td class="tg-7zrl">Haikyu!!  Official Color Illustrations Book&nbsp;&nbsp;&nbsp;Collection High Color!!</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kimetsu no Yaiba  21 SE</td>
@@ -243,7 +294,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">07/06</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Boruto: Naruto Next&nbsp;Generations  1, 3, 4, 8</td>
+    <td class="tg-7zrl">Boruto: Naruto Next&nbsp;&nbsp;&nbsp;Generations  1, 3, 4, 8</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Dr. Stone  1-15</td>
@@ -285,7 +336,7 @@
     <td class="tg-7zrl">One Piece  26</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">'Tis Time for&nbsp;"Torture," Princess  1</td>
+    <td class="tg-7zrl">'Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  1</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">06/30</span></td>
@@ -306,7 +357,7 @@
     <td class="tg-7zrl">Chainsaw Man  1-7</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection  </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection  </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kimetsu no Yaiba  11-19</td>
@@ -342,7 +393,7 @@
     <td class="tg-7zrl">Haikyu!!  1-42</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Haikyu!!  Official Color Illustrations Book&nbsp;Collection High Color!!</td>
+    <td class="tg-7zrl">Haikyu!!  Official Color Illustrations Book&nbsp;&nbsp;&nbsp;Collection High Color!!</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Haikyu-bu!!  1</td>
@@ -384,7 +435,7 @@
     <td class="tg-7zrl">My Hero Academia  1-26</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">My Hero Academia:&nbsp;Vigilantes  2</td>
+    <td class="tg-7zrl">My Hero Academia:&nbsp;&nbsp;&nbsp;Vigilantes  2</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">06/09</span></td>
@@ -393,13 +444,13 @@
     <td class="tg-7zrl">Black Clover  1-19</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Black Clover Quartet&nbsp;Knights  2</td>
+    <td class="tg-7zrl">Black Clover Quartet&nbsp;&nbsp;&nbsp;Knights  2</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kinnikuman  41, 45, 56</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">ONE PIECE  34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;76-80</td>
+    <td class="tg-7zrl">ONE PIECE  34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;&nbsp;&nbsp;76-80</td>
   </tr>
   <tr>
     <td class="tg-7zrl">ONE PIECE Gakuen  1</td>
@@ -459,7 +510,7 @@
     <td class="tg-7zrl">SPYxFAMILY  4</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Super Dragon Ball Heros Dark&nbsp;Makai Mission!!  1</td>
+    <td class="tg-7zrl">Super Dragon Ball Heros Dark&nbsp;&nbsp;&nbsp;Makai Mission!!  1</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">06/03</span></td>
@@ -510,7 +561,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">05/19</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection   </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection   </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Jujutsu Kaisen  0</td>
@@ -546,16 +597,16 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">04/24</span></td>
   </tr>
   <tr>
+    <td class="tg-7zrl">Mission: Yozakura Family  1</td>
+  </tr>
+  <tr>
+    <td class="tg-7zrl">Mission: Yozakura Family  2</td>
+  </tr>
+  <tr>
     <td class="tg-7zrl">SPYxFAMILY  1-3</td>
   </tr>
   <tr>
     <td class="tg-7zrl">Undead Unluck  1</td>
-  </tr>
-  <tr>
-    <td class="tg-7zrl">Yozakura Family  1</td>
-  </tr>
-  <tr>
-    <td class="tg-7zrl">Yozakura Family  2</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">04/23</span></td>
@@ -603,19 +654,19 @@
     <td class="tg-7zrl">Jujutsu Kaisen  1-10</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">My Hero Academia: Team Up&nbsp;Mission  1</td>
+    <td class="tg-7zrl">Mission: Yozakura Family  1</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">'Tis Time for&nbsp;"Torture," Princess  1</td>
+    <td class="tg-7zrl">My Hero Academia: Team Up&nbsp;&nbsp;&nbsp;Mission  1</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Yozakura Family  1</td>
+    <td class="tg-7zrl">'Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess  1</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">04/02</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection   </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection   </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Kimetsu no Yaiba  4-13</td>
@@ -651,7 +702,7 @@
     <td class="tg-7zrl">Kimetsu no Yaiba  1-5</td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Sing "Yesterday" for&nbsp;Me  1-11</td>
+    <td class="tg-7zrl">Sing "Yesterday" for&nbsp;&nbsp;&nbsp;Me  1-11</td>
   </tr>
   <tr>
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">03/06</span></td>
@@ -663,7 +714,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">03/05</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection   </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection   </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Jujutsu Kaisen  0</td>
@@ -723,7 +774,7 @@
     <td class="tg-m7nw"><span style="font-weight:700;text-decoration:none;color:black;background-color:#DBE5F1">02/05</span></td>
   </tr>
   <tr>
-    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;Collection   </td>
+    <td class="tg-7zrl">Gotouge Koyaharu Short Stories&nbsp;&nbsp;&nbsp;Collection   </td>
   </tr>
   <tr>
     <td class="tg-7zrl">Jujutsu Kaisen  0</td>
