--- a/TOC/reprint/issue.html
+++ b/TOC/reprint/issue.html
@@ -45,15 +45,15 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/03  Dokyuu Hentai&nbsp;&nbsp;&nbsp;HxEros 8</td>
+    <td class="tg-7zrl">09/03  Dokyuu Hentai&nbsp;HxEros 8</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/03  Tis Time for&nbsp;&nbsp;&nbsp;"Torture," Princess 3</td>
+    <td class="tg-7zrl">09/03  Tis Time for&nbsp;"Torture," Princess 3</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/03  Mission: Yozakura&nbsp;&nbsp;&nbsp;Family 2-4</td>
+    <td class="tg-7zrl">09/03  Mission: Yozakura&nbsp;Family 2-4</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -64,11 +64,11 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/25SPYxFAMILY 1-4</td>
+    <td class="tg-7zrl">08/25  SPYxFAMILY 1-4</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/04Moriarty the Patriot 1-12</td>
+    <td class="tg-7zrl">09/04  Moriarty the Patriot 1-12</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -76,53 +76,53 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/01Kochikame 97-128</td>
+    <td class="tg-7zrl">09/01  Kochikame 97-128</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/01Blue Exorcist 17, 19, 21</td>
+    <td class="tg-7zrl">09/01  Blue Exorcist 17, 19, 21</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/01Seraph of The End 1</td>
+    <td class="tg-7zrl">09/01  Seraph of The End 1</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/01Fire Punch 1-8</td>
+    <td class="tg-7zrl">09/01  Fire Punch 1-8</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/01Yu-Gi-Oh! OGC Structures &nbsp;&nbsp;&nbsp;1</td>
+    <td class="tg-7zrl">09/01  Yu-Gi-Oh! OGC Structures &nbsp;1</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">29-Jul-2020</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/28The Promised Neverland 1-19</td>
+    <td class="tg-7zrl">08/28  The Promised Neverland 1-19</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/03Jujutsu Kaisen 0, 1-11</td>
+    <td class="tg-7zrl">09/03  Jujutsu Kaisen 0, 1-11</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/04Haikyu!! 1-22</td>
+    <td class="tg-7zrl">09/04  Haikyu!! 1-22</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">09/09Haikyu!! 23-44</td>
+    <td class="tg-7zrl">09/09  Haikyu!! 23-44</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">16-Jul-2020</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/18Tis Time for "Torture," Princess 1-2</td>
+    <td class="tg-7zrl">08/18  Tis Time for "Torture," Princess 1-2</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/18Agravity Boys 1-2</td>
+    <td class="tg-7zrl">08/18  Agravity Boys 1-2</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -130,23 +130,23 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/172.5D Seduction 1</td>
+    <td class="tg-7zrl">08/17  2.5D Seduction 1</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17Jigokuraku 1</td>
+    <td class="tg-7zrl">08/17  Jigokuraku 1</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17SPYxFAMILY 1</td>
+    <td class="tg-7zrl">08/17  SPYxFAMILY 1</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17Dosanko Gyaru is Mega Cute 1</td>
+    <td class="tg-7zrl">08/17  Dosanko Gyaru is Mega Cute 1</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">08/17Boukyaku Battery 1</td>
+    <td class="tg-7zrl">08/17  Boukyaku Battery 1</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">13-Jul-2020</td>
@@ -401,7 +401,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">07/10 Haikyu!! Official Color Illustrations Book Collection&nbsp;&nbsp;&nbsp;High Color!!</td>
+    <td class="tg-7zrl">07/10 Haikyu!! Official Color Illustrations Book Collection&nbsp;High Color!!</td>
   </tr>
   <tr>
     <td class="tg-m7nw" colspan="2">09-Jun-2020</td>
@@ -614,7 +614,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">06/09 ONE PIECE 34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;&nbsp;&nbsp;76-80</td>
+    <td class="tg-7zrl">06/09 ONE PIECE 34-37, 40-42, 46-47, 49-50, 69-70, 72, 74,&nbsp;76-80</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
@@ -646,7 +646,7 @@
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
-    <td class="tg-7zrl">06/16 Haikyu!! Official Color Illustrations Book Collection&nbsp;&nbsp;&nbsp;High Color!!</td>
+    <td class="tg-7zrl">06/16 Haikyu!! Official Color Illustrations Book Collection&nbsp;High Color!!</td>
   </tr>
   <tr>
     <td class="tg-7zrl"></td>
