--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -1,90 +1,26 @@
-
 <!DOCTYPE html>
 <html>
 <head> 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-142193139-1');
-</script>
-
-  <link rel="shortcut icon"
-   type="image/x-icon"
-        href="fav.ico">
- <title>Shueisha Manga Reprints List</title> 
- <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Shueisha Manga Reprints List">	
-<meta property="og:description" content="Log for Shueisha manga reprints">
-<link rel="stylesheet" type="text/css" href="w3.css">
+<link rel="shortcut icon" type="image/x-icon" href="fav.ico">
+<title>Shueisha Manga Reprints List</title> 
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="og:title" content="Shueisha Manga Reprints List">	
+<meta name="og:description" content="Log for Shueisha manga reprints">
 <link rel="stylesheet" type="text/css" href="reprint.css">
 </head>
-<body onload="load_issue();load_print()">
-<div class="navbar">
-<div class="fit">
-  <div class="dropdown">
-    <button class="dropbtn">Menu 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="/">Home</a>
-      <a href="https://manganimy.github.io/TOC/">Weekly Shonen Jump Hub</a>
-    </div>
-  </div> 
-</div>
-</div>	
-	<div style="margin: 0 8px">	
-<div class="content">  
-
-<h1>Shueisha Manga Reprint List</h1> 
-<hr style="border-color:black">
-
-<div class="w3-row">
-    <a href="javascript:void(0)" onclick="openlist(event, 'byIssue')">
-      <div class="w3-half tablink w3-bottombar w3-hover-light-grey w3-padding">By Issuance Date</div>
-    </a>
-    <a href="javascript:void(0)" onclick="openlist(event, 'byDate');">
-      <div class="w3-half tablink w3-bottombar w3-hover-light-grey w3-padding">By Reprints Date</div>
-    </a>
-</div>
-
-  <div id="byIssue" class="w3-container type" style="display:none">
-<div id ="issue_table"> </div>
-</div>
-
-  <div id="byDate" class="w3-container type" style="display:none">
-<div id ="print_table"> </div>
-</div>
-
-<script>
-function openlist(evt, listType) {
-  var i, x, tablinks;
-  x = document.getElementsByClassName("type");
-  for (i = 0; i < x.length; i++) {
-    x[i].style.display = "none";
-  }
-  tablinks = document.getElementsByClassName("tablink");
-  for (i = 0; i < x.length; i++) {
-    tablinks[i].className = tablinks[i].className.replace(" w3-border-red", "");
-  }
-  document.getElementById(listType).style.display = "block";
-  evt.currentTarget.firstElementChild.className += " w3-border-red";
-}
-</script>
-<script>
-function load_issue() {
-     document.getElementById("issue_table").innerHTML='<object type="text/html" data="issue.html" style="width: 100%; height: 100%"></object>';
-}
-</script>
-<script>
-function load_print() {
-     document.getElementById("print_table").innerHTML='<object type="text/html" data="print.html" style="width: 100%; height: 100%"></object>';
-}
-</script>
-  </div><!-- end content -->	
-</div> <!-- end margin -->
-</body>
+<body>
+	<div id="header">
+	<h2>Shueisha Manga Reprints List</h2>
+	</div>
+	<hr style="border-color:black">
+	<div id="page-wrap">
+	</div>
+	<div id="footer">
+	<hr style="border-color:black">
+	<p> footer </p>
+	</div>
+</body>	
+<script src="https://d3js.org/d3.v3.js"></script>
+<script src="reprint.js"></script>
 </html>
