--- a/TOC/reprint/2021.html
+++ b/TOC/reprint/2021.html
@@ -12,10 +12,10 @@
 <body>
 	<div id="header">
 	<h2>Shueisha Manga Reprints List</h2>
-	</div>
-	<hr style="border-color:black">
 	<div id="year-nav">
 	<a href="#">2020</a> | <a href="2021">2021</a>
+	</div>
+	<hr style="border-color:black">	
 	</div>
 	<hr style="border-color:black">
 	<div id="page-wrap">
@@ -26,5 +26,5 @@
 	</div>
 </body>	
 <script src="https://d3js.org/d3.v3.js"></script>
-<script src="reprint.js"></script>
+<script src="reprint2021.js"></script>
 </html>
