--- a/TOC/reprint/2021.html
+++ b/TOC/reprint/2021.html
@@ -12,19 +12,19 @@
 <body>
 	<div id="header">
 	<h2>Shueisha Manga Reprints List</h2>
-	<hr style="border-color:black">	
+	</div>
+	<hr style="border-color:black">
 	<div id="year-nav">
-	<a href="2020">2020</a> | <a href="#">2021</a>
+	<p><a href="2020">2020</a> |<strong>2021</strong></p>
 	</div>
-	<hr style="border-color:black">	
-	</div>
+	<hr style="border-color:black">
 	<div id="page-wrap">
 	</div>
 	<div id="footer">
 	<hr style="border-color:black">
 	<p> footer </p>
 	</div>
-</body>	
+</body>		
 <script src="https://d3js.org/d3.v3.js"></script>
 <script src="reprint2021.js"></script>
 </html>
