--- a/TOC/reprint/2020.html
+++ b/TOC/reprint/2020.html
@@ -12,10 +12,10 @@
 <body>
 	<div id="header">
 	<h2>Shueisha Manga Reprints List</h2>
-	<hr style="border-color:black">		
-	<div id="year-nav">
-	<a href="#">2020</a> | <a href="2021">2021</a>
 	</div>
+	<hr style="border-color:black">
+	<div id="year-nav">
+	<p><strong>2020</strong> | <a href="2021">2021</a></p>
 	</div>
 	<hr style="border-color:black">
 	<div id="page-wrap">
