--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -15,7 +15,7 @@
 	</div>
 	<hr style="border-color:black">
 	<div id="year-nav">
-	<p><strong>2020</strong> | <a href="2021">2021</a></p>
+	<p><a href="2020">2020</a> |<strong>2021</strong></p>
 	</div>
 	<hr style="border-color:black">
 	<div id="page-wrap">
