--- a/TOC/reprint/index.html
+++ b/TOC/reprint/index.html
@@ -26,5 +26,5 @@
 	</div>
 </body>	
 <script src="https://d3js.org/d3.v3.js"></script>
-<script src="reprint.js"></script>
+<script src="reprint2021.js"></script>
 </html>
