--- a/sp/sketdance/index.html
+++ b/sp/sketdance/index.html
@@ -1,5 +1,21 @@
 <html>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'UA-142193139-1');
+</script>
+
+	  <link rel="shortcut icon"
+   type="image/x-icon"
+        href="/TOC/img/fav.ico">
+<title>Sket Dance Bunko Edition</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
+<meta property="og:title" content="Sket Dance Bunko Edition">
+<meta property="og:description" content="Sket Dance Bunko Edition">
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
 <style>
