--- a/sp/anya/index.html
+++ b/sp/anya/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142193139-1"></script>
@@ -124,3 +125,4 @@
   </div><!-- end content -->	
 </div> <!-- end margin -->
 </body>
+</html>
