--- a/sp/dqdai/index.html
+++ b/sp/dqdai/index.html
@@ -12,10 +12,10 @@
 	  <link rel="shortcut icon"
    type="image/x-icon"
         href="/TOC/img/fav.ico">
-<title>Sket Dance Bunko Edition</title>
+<title>Dragon Quest: The Adventure of Dai New Edition</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
-<meta property="og:title" content="Sket Dance Bunko Edition">
-<meta property="og:description" content="Sket Dance Bunko Edition">
+<meta property="og:title" content="Dragon Quest: The Adventure of Dai New Edition">
+<meta property="og:description" content="Dragon Quest: The Adventure of Dai New Edition">
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
 <style>
@@ -60,6 +60,6 @@ height: 600px;
 </marquee>
 </div>
 </div>
-<div class="copyright">© Kenta Shinohara/Shuiesha</div>
+<div class="copyright">©Riku Sanjo,Koji Inada /Shuiesha ©SQUARE ENIX CO., LTD.</div>
 </body>
 </html>
