--- a/sp/eren/index.html
+++ b/sp/eren/index.html
@@ -63,6 +63,6 @@ height: 600px;
 </marquee>
 </div>
 </div>
-<div class="copyright">© Kenta Shinohara/Shuiesha</div>
+<div class="copyright">©Kappy・nifuni/Shuiesha</div>
 </body>
 </html>
