--- a/sp/dqdai/index.html
+++ b/sp/dqdai/index.html
@@ -57,6 +57,9 @@ height: 600px;
  <img src="10.jpg">
  <img src="11.jpg">
  <img src="12.jpg">
+ <img src="13.jpg">
+ <img src="14.jpg">
+ <img src="15.jpg"> 
 </marquee>
 </div>
 </div>
