--- a/sp/dqdai/clean.html
+++ b/sp/dqdai/clean.html
@@ -14,8 +14,8 @@
         href="/TOC/img/fav.ico">
 <title>Dragon Quest: The Adventure of Dai New Edition</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
-<meta property="og:title" content="Dragon Quest: The Adventure of Dai New Edition">
-<meta property="og:description" content="Dragon Quest: The Adventure of Dai New Edition">
+<meta property="og:title" content="Dragon Quest: The Adventure of Dai New Edition (Clean Version)">
+<meta property="og:description" content="Dragon Quest: The Adventure of Dai New Edition (Clean Version)">
 <head>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=yes">
 <style>
